# devnetlabs

./: README.md  pyproject.toml  requirements.txt
src/devnetlabs/: __main__.py  cli.py  connector.py  eveng.py  labs.py  menu.py  utils.py
src/jlabs/: cli.py
