[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "devnetlabs"
version = "0.0.1"
dynamic = ["dependencies"]

[project.scripts]
labs = "devnetlabs.__main__:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

